<resources>
    <string name="app_name">MySubmission</string>
    <string name="name">A. Muh. Fitrah Asfar</string>
    <string name="email">fitrah4551@gmail.com</string>
    <string name="name_movie">Name Movie</string>
    <string name="rating_movie">Rating</string>
    <string name="genre_move">Genre</string>
    <string name="durasi">Durasi</string>
    <string name="tahun">Tahun</string>
    <string name="bahasa">Language</string>
    <string name="english">English</string>
    <string name="komentar">Commment</string>
    <string name="total">200+</string>
    <string name="favorit">Favorite</string>
    <string name="totalFavorit">10K+</string>
    <string name="share">Share Content</string>
    <string name="populer">Populer</string>
    <string name="deskripsi">Description</string>
    <string name="deskripsi_detail">Description detail</string>

    <string-array name="list_name_movie">
        <item>Captain America: The First Avenger</item>
        <item>Captain Marvel</item>
        <item>Iron Man</item>
        <item>The Incredible Hulk</item>
        <item>Thor</item>
        <item>The Avengers</item>
        <item>Guardians of the Galaxy</item>
        <item>Ant-Man</item>
        <item>Doctor Strange</item>
        <item>Black Panther</item>
    </string-array>

    <string-array name="list_sutradara_movie">
        <item>Joe Johnston </item>
        <item>Anna Boden, Ryan Fleck</item>
        <item>Jon Favreau</item>
        <item>Louis Leterrier</item>
        <item>Kenneth Branagh</item>
        <item>Joss Whedon</item>
        <item>James Gunn</item>
        <item>Peyton Reed</item>
        <item>Scott Derrickson</item>
        <item>Ryan Coogler</item>
    </string-array>

    <string-array name="list_years_movie">
        <item>2011</item>
        <item>2019</item>
        <item>2008</item>
        <item>2008</item>
        <item>2011</item>
        <item>2012</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2018</item>
    </string-array>

    <string-array name="list_rating_movie">
        <item>6.8/10 IMDb</item>
        <item>6.8/10 IMDb</item>
        <item>7.9/10 IMDb</item>
        <item>6.6/10 IMDb</item>
        <item>7.0/10 IMDb</item>
        <item>8.0/10 IMDb</item>
        <item>8.0/10 IMDb</item>
        <item>7.3/10 IMDb</item>
        <item>7.5/10 IMDb</item>
        <item>7.3/10 IMDb</item>
    </string-array>

    <string-array name="list_genre_movie">
        <item>Action, Adventure, Sci-Fi</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Action, Fantasy</item>
        <item>Action, Sci-Fi</item>
        <item>Action, Adventure, Comedy</item>
        <item>Action, Comedy, Sci-Fi</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Sci-Fi</item>
    </string-array>

    <string-array name="list_durasi_movie">
        <item>2h 4m</item>
        <item>2h 3m</item>
        <item>2h 6m</item>
        <item>1h 52m</item>
        <item>1h 55m</item>
        <item>2h 23m</item>
        <item>2h 1m</item>
        <item>1h 57m</item>
        <item>1h 55m</item>
        <item>2h 14m</item>
    </string-array>

    <string-array name="list_rating_usia">
        <item>13+</item>
        <item>13+</item>
        <item>17+</item>
        <item>13+</item>
        <item>13+</item>
        <item>17+</item>
        <item>13+</item>
        <item>13+</item>
        <item>13+</item>
        <item>17+</item>
    </string-array>

    <string-array name="list_storyline_movie">
        <item>It is 1942, America has entered World War II, and sickly but determined Steve Rogers is frustrated at being rejected yet again for military service. Everything changes when Dr. Erskine recruits him for the secret Project Rebirth. Proving his extraordinary courage, wits and conscience, Rogers undergoes the experiment and his weak body is suddenly enhanced into the maximum human potential. When Dr. Erskine is then immediately assassinated by an agent of Nazi Germanys secret HYDRA research department (headed by Johann Schmidt, a.k.a. the Red Skull), Rogers is left as a unique man who is initially misused as a propaganda mascot; however, when his comrades need him, Rogers goes on a successful adventure that truly makes him Captain America, and his war against Schmidt begins.</item>
        <item>After crashing an experimental aircraft, Air Force pilot Carol Danvers is discovered by the Kree and trained as a member of the elite Starforce Military under the command of her mentor Yon-Rogg. Six years later, after escaping to Earth while under attack by the Skrulls, Danvers begins to discover theres more to her past. With help from S.H.I.E.L.D. agent Nick Fury, they set out to unravel the truth.</item>
        <item>Tony Stark. Genius, billionaire, playboy, philanthropist. Son of legendary inventor and weapons contractor Howard Stark. When Tony Stark is assigned to give a weapons presentation to an Iraqi unit led by Lt. Col. James Rhodes, hes given a ride on enemy lines. That ride ends badly when Starks Humvee that hes riding in is attacked by enemy combatants. He survives - barely - with a chest full of shrapnel and a car battery attached to his heart. In order to survive he comes up with a way to miniaturize the battery and figures out that the battery can power something else. Thus Iron Man is born. He uses the primitive device to escape from the cave in Iraq. Once back home, he then begins work on perfecting the Iron Man suit. But the man who was put in charge of Stark Industries has plans of his own to take over Tonys technology for other matters.</item>
        <item>Depicting the events after the Gamma Bomb. The Incredible Hulk tells the story of Dr Bruce Banner, who seeks a cure to his unique condition, which causes him to turn into a giant green monster under emotional stress. Whilst on the run from military which seeks his capture, Banner comes close to a cure. But all is lost when a new creature emerges: The Abomination.</item>
        <item>The warrior Thor (Chris Hemsworth) is cast out of the fantastic realm of Asgard by his father Odin (Sir Anthony Hopkins) for his arrogance and sent to Earth to live amongst humans. Falling in love with scientist Jane Foster (Natalie Portman) teaches Thor much-needed lessons, and his new-found strength comes into play as a villain from his homeland sends dark forces toward Earth.</item>
        <item>Loki, the adopted brother of Thor, teams-up with the Chitauri Army and uses the Tesseracts power to travel from Asgard to Midgard to plot the invasion of Earth and become a king. The director of the agency S.H.I.E.L.D., Nick Fury, sets in motion project Avengers, joining Tony Stark a.k.a. the Iron Man; Steve Rogers, a.k.a. Captain America; Bruce Banner, a.k.a. The Hulk; Thor; Natasha Romanoff, a.k.a. Black Widow; and Clint Barton, a.k.a. Hawkeye, to save the world from the powerful Loki and the alien invasion.</item>
        <item>After stealing a mysterious orb in the far reaches of outer space, Peter Quill from Earth is now the main target of a manhunt led by the villain known as Ronan the Accuser. To help fight Ronan and his team and save the galaxy from his power, Quill creates a team of space heroes known as the "Guardians of the Galaxy" to save the galaxy.</item>
        <item>Armed with the astonishing ability to shrink in scale but increase in strength, con-man Scott Lang must embrace his inner-hero and help his mentor, Dr. Hank Pym, protect the secret behind his spectacular Ant-Man suit from a new generation of towering threats. Against seemingly insurmountable obstacles, Pym and Lang must plan and pull off a heist that will save the world.</item>
        <item>Marvels "Doctor Strange" follows the story of the talented neurosurgeon Doctor Stephen Strange who, after a tragic car accident, must put ego aside and learn the secrets of a hidden world of mysticism and alternate dimensions. Based in New York Citys Greenwich Village, Doctor Strange must act as an intermediary between the real world and what lies beyond, utilising a vast array of metaphysical abilities and artifacts to protect the Marvel Cinematic Universe.</item>
        <item>After the events of Captain America: Civil War, Prince TChalla returns home to the reclusive, technologically advanced African nation of Wakanda to serve as his countrys new king. However, TChalla soon finds that he is challenged for the throne from factions within his own country. When two foes conspire to destroy Wakanda, the hero known as Black Panther must team up with C.I.A. agent Everett K. Ross and members of the Dora Milaje, Wakandan special forces, to prevent Wakanda from being dragged into a world war.</item>
    </string-array>

    <string-array name="list_url_photo">
        <item>https://m.media-amazon.com/images/M/MV5BMTYzOTc2NzU3N15BMl5BanBnXkFtZTcwNjY3MDE3NQ@@._V1_FMjpg_UX1000_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BMTE0YWFmOTMtYTU2ZS00ZTIxLWE3OTEtYTNiYzBkZjViZThiXkEyXkFqcGdeQXVyODMzMzQ4OTI@._V1_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BMTUyNzk3MjA1OF5BMl5BanBnXkFtZTcwMTE1Njg2MQ@@._V1_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BOGE4NzU1YTAtNzA3Mi00ZTA2LTg2YmYtMDJmMThiMjlkYjg2XkEyXkFqcGdeQXVyNTgzMDMzMTg@._V1_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BNDYxNjQyMjAtNTdiOS00NGYwLWFmNTAtNThmYjU5ZGI2YTI1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BNDIzMTk4NDYtMjg5OS00ZGI0LWJhZDYtMzdmZGY1YWU5ZGNkXkEyXkFqcGdeQXVyMTI5NzUyMTIz._V1_FMjpg_UX1000_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BMjM2NTQ5Mzc2M15BMl5BanBnXkFtZTgwNTcxMDI2NTE@._V1_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BNjgwNzAzNjk1Nl5BMl5BanBnXkFtZTgwMzQ2NjI1OTE@._V1_.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BMTg1MTY2MjYzNV5BMl5BanBnXkFtZTgwMTc4NTMwNDI@._V1_.jpg</item>
    </string-array>
</resources>